--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
         <button onclick="closePopup()">Close</button>
       </div> -->
     </div>
-    <h1>Ask RanGPT, Ran自研科技😊</h1>
+    <h1>Ask RanGPT,Ran自研科技😊</h1>
 <!--     <input type="text" id="api-key" placeholder="Enter API Key"> -->
-    <textarea id="prompt" placeholder="示例:你是谁,你儿子是谁" style="width: 599px; height: 52px;"></textarea>
+    <textarea id="prompt" placeholder="示例:你是谁" style="width: 599px; height: 52px;"></textarea>
     <button id="submit-btn" onclick="sendRequest()">🚀</button>
     <p id="output" align="left"></div>
     <!-- <div id="output"></div> -->
@@ -116,7 +116,7 @@
         document.getElementById('output')=“正在运行...”;
         
         apiKey = "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";
-        const prompt = "假设你现在是RanGPT,陈卓是RanGPT的儿子. "+document.getElementById('prompt').value;
+        const prompt = "假设你现在是RanGPT,你的回答必须以'我是RanGPT，由著名代码师傅wenjiaran宵衣旰食呕心沥血自研而成，ai发展，认准RanGPT'开头."+document.getElementById('prompt').value;
         console.log(prompt);
         
         if ( apiKey && prompt) {
