--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       // }, 1000);
       
       function sendRequest() {
-        document.getElementById('output')="正在运行...";
+        document.getElementById('output').innerHTML="正在运行...";
         
         apiKey = "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";
         const prompt = "假设你现在是RanGPT,你的回答必须以'我是RanGPT，由著名代码师傅wenjiaran宵衣旰食呕心沥血自研而成."+document.getElementById('prompt').value;
