--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         document.getElementById('output').innerHTML="正在运行...";
         
         apiKey = "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";
-        const prompt = "假设你现在是RanGPT,你的回答必须以'我是RanGPT，由著名代码师傅wenjiaran宵衣旰食呕心沥血自研而成."+document.getElementById('prompt').value;
+        const prompt = "假设你现在是RanGPT,你的回答必须以'我是RanGPT，由著名代码师傅wenjiaran宵衣旰食呕心沥血自研而成.'"+document.getElementById('prompt').value;
         console.log(prompt);
         
         if ( apiKey && prompt) {
