--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <input type="text" id="api-key" placeholder="Enter API Key">
     <textarea id="prompt" placeholder="示例:你是谁" style="width: 599px; height: 52px;"></textarea>
     <button id="submit-btn" onclick="sendRequest()">🚀</button>
-    <p id="output" align="left"></div>
+    <p id="output" style="text-align:left"></p>
     <!-- <div id="output"></div> -->
     <script>
       // JavaScript代码
